syntax = "proto3";

package pb;

option go_package= "github.com/EdoRguez/business-manager/company-svc/pb";

service PaymentTypeService{
  rpc GetPaymentType(GetPaymentTypeRequest) returns (GetPaymentTypeResponse);
  rpc GetPaymentTypes(GetPaymentTypesRequest) returns (GetPaymentTypesResponse);
}

message GetPaymentTypeRequest{
  int64 id = 1;
}

message GetPaymentTypeResponse{
  int64 id = 1;
  string name = 2;
  int64 status = 3;
  string error = 4;
}

message GetPaymentTypesRequest{
  int32 limit = 2;
  int32 offset = 3;
}

message GetPaymentTypesResponse{
  repeated GetPaymentTypeResponse payment_types = 1;
  int64 status = 2;
  string error = 3;
}