syntax = "proto3";

package pb;

option go_package= "github.com/EdoRguez/business-manager/gateway/company/pb";

service PaymentService{
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
  rpc GetPayments(GetPaymentsRequest) returns (GetPaymentsResponse);
  rpc UpdatePayment(UpdatePaymentRequest) returns (UpdatePaymentResponse);
  rpc DeletePayment(DeletePaymentRequest) returns (DeletePaymentResponse);
}

message CreatePaymentRequest{
  int64 companyId = 1;
  string name = 2;
  string bank = 3;
  string accountNumber = 4;
  string accountType = 5;
  string identificationNumber = 6;
  string identificationType = 7;
  string phone = 8;
  string email = 9;
  int64 paymentTypeId = 10;
}

message CreatePaymentResponse{
  int64 id = 1;
  int64 status = 2;
  string error = 3;
}

message GetPaymentRequest{
  int64 id = 1;
}

message GetPaymentResponse{
  int64 id = 1;
  int64 companyId = 2;
  string name = 3;
  string bank = 4;
  string accountNumber = 5;
  string accountType = 6;
  string identificationNumber = 7;
  string identificationType = 8;
  string phone = 9;
  string email = 10;
  int64 paymentTypeId = 11;
  GetPaymentTypeResponse paymentType = 12;
  int64 status = 13;
  string error = 14;
}

message GetPaymentTypeResponse{
  int64 id = 1;
  string name = 2;
}

message GetPaymentsRequest{
  int64 companyId = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetPaymentsResponse{
  repeated GetPaymentResponse payments = 1;
  int64 status = 2;
  string error = 3;
}

message UpdatePaymentRequest{
  int64 id = 1;
  string name = 2;
  string bank = 3;
  string accountNumber = 4;
  string accountType = 5;
  string identificationNumber = 6;
  string identificationType = 7;
  string phone = 8;
  string email = 9;
  int64 paymentTypeId = 10;
}

message UpdatePaymentResponse{
  int64 status = 1;
  string error = 2;
}

message DeletePaymentRequest{
  int64 id = 1;
}

message DeletePaymentResponse{
  int64 status = 1;
  string error = 2;
}
